[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Adds a musical symbol end slur after each sentence except the last regardless of punctuation. You can infer how this could be useful... I'm not liable for any "mistakes" made due to using the project. I made this out of curiosity."
authors = ["Malympian <malympianduck.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
